--- a/www_data/data/view/log_up/index.html
+++ b/www_data/data/view/log_up/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Регистрация</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="../js/log_up.js"></script>
-    <link rel="stylesheet" href="../css/log_up.css">
+    <script src="../data/view/log_up/js/log_up.js"></script>
+    <link rel="stylesheet" href="../log_up/css/log_up.css">
 </head>
 
 <body>
