--- a/www_data/data/view/personal_area/index.html
+++ b/www_data/data/view/personal_area/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Личный кабинет</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="../js/personal_area.js"></script>
-    <link rel="stylesheet" href="../css/personal_area.css">
+    <script src="../data/view/personal_area/js/personal_area.js"></script>
+    <link rel="stylesheet" href="../personal_area/css/personal_area.css">
 </head>
 
 <body>
