--- a/www_data/data/view/personal_area/index.html
+++ b/www_data/data/view/personal_area/index.html
@@ -5,6 +5,8 @@
     <title>Личный кабинет</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="../personal_area/js/personal_area.js"></script>
+    <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="../personal_area/css/personal_area.css">
 </head>
 
@@ -12,10 +14,24 @@
     <div class="container">
         <div class="frame">
             <div class="background_crystal">
-                <form class="form_personal_area" action="">
+                <form class="form_personal_area" onsubmit="return false;">
+                    <div class="main_menu">
+                        <div class="logo">
+                            <span class="char_T style_of_text">T</span>
+                            <span class="char_eam style_of_text">eam</span>
+                            <span class="char_M style_of_text">M</span>
+                            <span class="char_ate style_of_text">ate</span>
+                        </div>
+                        
+                    </div>
                     <div class="personal_information">
-                        <span >Личные данные</span>
-                       
+                        <div class="name_of_person">
+                            <span class="style_of_text" id="name_of_person">Borutigfhfga</span>
+                            <span class="style_of_text" id="login_of_person">@fgn</span>
+                        </div>
+                        <div class="personal_left_block">
+
+                        </div>
                     </div>
                 </form>
             </div>
