--- a/www_data/data/view/personal_area/index.html
+++ b/www_data/data/view/personal_area/index.html
@@ -16,21 +16,57 @@
             <div class="background_crystal">
                 <form class="form_personal_area" onsubmit="return false;">
                     <div class="main_menu">
-                        <div class="logo">
-                            <span class="char_T style_of_text">T</span>
-                            <span class="char_eam style_of_text">eam</span>
-                            <span class="char_M style_of_text">M</span>
-                            <span class="char_ate style_of_text">ate</span>
+                        <div class="main_menu_logo">
+                            <span id="char_T" class="style_of_text">T</span>
+                            <span id="char_eam" class="style_of_text">eam</span>
+                            <span id="char_M" class="style_of_text">M</span>
+                            <span id="char_ate" class="style_of_text">ate</span>
                         </div>
-                        
+                        <div class="main_menu_projects">
+                            <span class="style_of_text" id="main_menu_projects">Проекты</span>
+                        </div>
+                        <a href="" id="href_all_projects" class="style_of_text">● Все проекты</a>
+                        <a href="" id="href_my_projects" class="style_of_text">● Мои проекты</a>
+                        <a href="" id="href_my_participation" class="style_of_text">● Моё участие</a>
+                        <div class="main_menu_people">
+                            <span class="style_of_text" id="main_menu_people">Люди</span>
+                        </div>
+                        <a href="" id="href_job_seekers" class="style_of_text">● Соискатели</a>
+                        <a href="" id="href_Candidates" class="style_of_text">● Кандидаты</a>
+                        <button class="style_of_text" id="button_Settings">Настройки</button>
+                        <button class="style_of_text" id="button_exit">Выход</button>
                     </div>
                     <div class="personal_information">
                         <div class="name_of_person">
-                            <span class="style_of_text" id="name_of_person">Borutigfhfga</span>
-                            <span class="style_of_text" id="login_of_person">@fgn</span>
+                            <span class="style_of_text" id="name_of_person"></span>
+                            <span class="style_of_text" id="login_of_person"></span>
                         </div>
-                        <div class="personal_left_block">
-
+                        <div class="flex_blocks">
+                            <div class="personal_left_block">
+                                <img src="" alt="Avatar" id="avatar">
+                                <span class="style_of_text" id="personal_position"></span>
+                                <span class="style_of_text" id="personal_birthday"></span>
+                                <span class="style_of_text" id="personal_education">Образование</span>
+                                <div class="personal_education"></div>
+                                <span class="style_of_text" id="personal_jobs">Места работы</span>
+                                <div class="personal_jobs"></div>
+                            </div>
+                            <div class="personal_right_block">
+                                <span class="style_of_text" id="personal_about_me">О себе:</span>
+                                <div class="personal_about_me ">Пусто</div>
+                                <span class="style_of_text" id="personal_professional_skills">Профессиональные навыки:</span>
+                                <div class="personal_professional_skills"></div>
+                                <span class="style_of_text" id="personal_personal_qualities">Личные качества:</span>
+                                <div class="personal_personal_qualities"></div>
+                                <span class="style_of_text" id="personal_current_projects">Текущие проекты:</span>
+                                <div class="personal_current_projects"></div>
+                                <span class="style_of_text" id="personal_completed_projects">Завершенные проекты:</span>
+                                <div class="personal_completed_projects"></div>
+                                <span class="style_of_text" id="personal_reviews_managers">Отвызы руководителей:</span>
+                                <div class="personal_reviews_managers"></div>
+                                <span class="style_of_text" id="personal_peer_review">Оценка коллег:</span>
+                                <div class="personal_peer_review"></div>
+                            </div>
                         </div>
                     </div>
                 </form>
