--- a/www_data/data/view/personal_area/css/personal_area.css
+++ b/www_data/data/view/personal_area/css/personal_area.css
@@ -1,5 +1,4 @@
 html{
-    background: black;
     background: url(../../../image/background.jpg) ;
     max-width: 1153px;
     max-height: 700px;
@@ -25,46 +24,169 @@ html{
 }
 
 .main_menu{
-    display: inline-block; 
     position: absolute;
     width: 234px;
     height: 574px;
     left: 0%;
     top: 0%;
-    background: rgba(255, 255, 255, 0.89);
+    margin: 1%;
+    background: rgba(255, 255, 255, 0.75);
 }
 
-.char_T{
-    top: 5%;
+#char_T{
+    top: 2%;
     left: 30%;
-    position: absolute;
     font-size: 48px;
+    position: absolute;
     color: #0F25ED;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.char_eam{
+#char_eam{
     position: absolute;
     left: 42%;
-    top: 6%;
     font-size: 28px;
+    top: 3%;
     color: #000000;
 }
 
-.char_M{
+#char_M{
     position: absolute;
     left: 38%;
-    top: 9%;
     font-size: 48px;
+    top: 6%;
     color: #43DE36;
 }
 
-.char_ate{
+#char_ate{
     position: absolute;
     left: 56%;
-    top: 12%;
+    top: 9%;
     font-size: 28px;
     color: #000000;
+}
+
+.main_menu_projects{
+    position: absolute;
+    width: 216px;
+    height: 24px;
+    left: 3%;
+    top: 20%;
+    background: #5262F2;
+    border-radius: 10px;
+}
+
+#main_menu_projects{
+    position: absolute;
+    font-size: 20px;
+    color: #FFFFFF;
+    left: 34%;
+}
+
+#href_all_projects{
+    position: absolute;
+    text-decoration: none;
+    font-size: 20px;
+    color: black;
+    left: 5%;
+    top: 25%;
+}
+
+#href_my_projects{
+    position: absolute;
+    text-decoration: none;
+    font-size: 20px;
+    color: black;
+    left: 5%;
+    top: 30%;
+}
+
+#href_my_participation{
+    position: absolute;
+    text-decoration: none;
+    font-size: 20px;
+    color: black;
+    left: 5%;
+    top: 35%;
+}
+#href_all_projects:hover { 
+    text-decoration: underline;
+    color: blue;
+} 
+#href_my_projects:hover { 
+    text-decoration: underline;
+    color: blue;
+} 
+#href_my_participation:hover { 
+    text-decoration: underline;
+    color: blue;
+} 
+
+.main_menu_people{
+    position: absolute;
+    width: 216px;
+    height: 24px;
+    left: 3%;
+    top: 45%;
+    background: #5EC939;
+    border-radius: 10px;
+}
+
+#main_menu_people{
+    position: absolute;
+    font-size: 20px;
+    color: #FFFFFF;
+    left: 39%;
+}
+
+#href_job_seekers{
+    position: absolute;
+    text-decoration: none;
+    font-size: 20px;
+    color: black;
+    left: 5%;
+    top: 50%;
+}
+
+#href_Candidates{
+    position: absolute;
+    text-decoration: none;
+    font-size: 20px;
+    color: black;
+    left: 5%;
+    top: 55%;
+}
+#href_job_seekers:hover { 
+    text-decoration: underline;
+    color: blue;
+} 
+#href_Candidates:hover { 
+    text-decoration: underline;
+    color: blue;
+} 
+
+#button_Settings{
+    position: absolute;
+    width: 216px;
+    left: 3%;
+    top: 80%;
+    background: #FCC400;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    font-size: 20px;
+    color: #FFFFFF;
+}
+
+#button_exit{
+    position: absolute;
+    width: 216px;
+    left: 3%;
+    top: 90%;
+    background: #D01E1E;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    font-size: 20px;
+    color: #FFFFFF;
 }
 
 .form_personal_area{
@@ -81,38 +203,200 @@ html{
 }
 
 .personal_information{
-    position: absolute;
     width: 850px;
-    height: 100%;
+    position: absolute;
     top: 0%;
-    background: #FFFFFF;
 }
 
 .name_of_person{
-    position: absolute;
-    width: 850px;
     height: 70px;
-    border: 2px solid rgba(82, 98, 242, 0.5);
+    border-bottom-style: solid;
+    border-bottom-color: #5262F2;
+    background: #FFFFFF;
 }
 
 #name_of_person{
-    position: absolute;
-    left: 2%;
-    top: 25%;
+    margin-left: 2%;
+    margin-top: 2%;
+    float: left;
+}
+
+#name_of_person:first-letter{
+    color: #5262F2;
 }
 
 #login_of_person{
     float: right;
     margin-right: 2%;
     margin-top: 2%;
-    top: 25%; 
     color: #C4C4C4;
 }
 
+#login_of_person:first-letter{
+    color: #5EC939;
+}
+
+.flex_blocks{
+    display: flex;
+}
+
+.flex_blocks div{
+    padding: 10px;
+}
+
 .personal_left_block{
-    position: absolute;
-    width: 300px;
-    height: 100%;
-    border: 2px solid rgba(82, 98, 242, 0.5);
-    top: 7.7%;
+    flex:1;
+    text-align: center;   
+    display: flex;
+    flex-direction: column;
+    background: #FFFFFF;
+    overflow: auto;
+}
+
+#avatar{
+    min-width: 150px;
+    min-height: 150px;
+    max-width: 150px;
+    max-height: 150px;
+    margin-left:23%;
+    margin-bottom: 5%;
+    border: 1px solid #5EC939;
+}
+
+#personal_position{
+    margin-bottom: 5%;
+}
+
+#personal_birthday{
+    margin-bottom: 5%;
+    font-size: 22px;
+}
+
+#personal_education{
+    width: 270px;
+    height: 25px;
+    background: #5262F2;
+    border-radius: 10px;
+    font-size: 20px;
+    color: #FFFFFF;
+}
+
+#personal_jobs{
+    margin-top: 5%;
+    width: 270px;
+    height: 25px;
+    background: #5262F2;
+    border-radius: 10px;
+    font-size: 20px;
+    color: #FFFFFF;
+}
+
+.personal_education span{
+    font-size: 20px;
+}
+
+.personal_jobs span{
+    font-size: 20px;
+    margin-bottom: 5%;
+}
+
+.personal_right_block{
+    flex:2;
+    display: flex;
+    flex-direction: column;  
+    overflow: auto;
+}
+
+::-webkit-scrollbar {
+    width: 0px;
+}
+
+.personal_about_me{
+    width: 96%;
+    background: #FFFFFF;
+    border-radius: 10px;
+    font-size: 20px;
+    margin-bottom: 5%;
+}
+
+.personal_professional_skills span{
+    font-size: 20px;
+    background: #5EC939;
+    border-radius: 10px;
+    padding: 5px;
+    margin: 1%;
+    margin-bottom: 1%;
+    display: inline-flex;
+}
+.personal_professional_skills{
+    margin-bottom: 3%;
+}
+
+.personal_personal_qualities span{
+    font-size: 20px;
+    background: #FCC400;
+    border-radius: 10px;
+    margin: 1%;
+    margin-bottom: 1%;
+    padding: 5px;
+    display: inline-flex;
+}
+
+.personal_personal_qualities{
+    margin-bottom: 3%;
+}
+
+.personal_current_projects{
+    margin-bottom: 3%;
+}
+
+.personal_current_projects div{
+    width: 96%;
+    background: #FFFFFF;
+    border-radius: 10px;
+    font-size: 20px;
+    margin-bottom: 2%;
+}
+
+.personal_completed_projects{
+    margin-bottom: 3%;
+}
+
+.personal_completed_projects div{
+    width: 96%;
+    background: #FFFFFF;
+    border-radius: 10px;
+    font-size: 20px;
+    margin-bottom: 2%;
+}
+
+
+.personal_reviews_managers{
+    margin-bottom: 3%;
+}
+
+.personal_reviews_managers div{
+    width: 96%;
+    background: #FFFFFF;
+    border-radius: 10px;
+    font-size: 20px;
+    margin-bottom: 2%;
+}
+
+.personal_reviews_managers .negative{
+    background: red;
+}
+.personal_reviews_managers .positive{
+    background: green;
+}
+
+.personal_peer_review{
+    margin-bottom: 3%;
+}
+
+.personal_peer_review div{
+    width: 96%;
+    background: #FFFFFF;
+    font-size: 20px;
+    margin-bottom: 2%;
 }
