--- a/www_data/data/view/log_up/css/log_up.css
+++ b/www_data/data/view/log_up/css/log_up.css
@@ -41,6 +41,10 @@ input{
     display: inline-block;
 }
 
+button:focus {
+    outline: none;
+}
+
 .personal_data{
     position: relative;
     width: 635px;
