--- a/www_data/data/view/personal_area/index.html
+++ b/www_data/data/view/personal_area/index.html
@@ -15,6 +15,7 @@
         <div class="frame">
             <div class="background_crystal">
                 <form class="form_personal_area" onsubmit="return false;">
+                    <button class="open_main_menu ">Показать меню</button>
                     <div class="main_menu">
                         <div class="main_menu_logo">
                             <span id="char_T" class="style_of_text">T</span>
@@ -58,13 +59,13 @@
                                 <div class="personal_professional_skills"></div>
                                 <span class="style_of_text" id="personal_personal_qualities">Личные качества:</span>
                                 <div class="personal_personal_qualities"></div>
-                                <span class="style_of_text" id="personal_current_projects">Текущие проекты:</span>
+                                <span class="style_of_text" id="personal_current_projects">Текущие проекты: <button class="button_personal_current_projects button_all">Все</button> </span>
                                 <div class="personal_current_projects"></div>
-                                <span class="style_of_text" id="personal_completed_projects">Завершенные проекты:</span>
+                                <span class="style_of_text" id="personal_completed_projects">Завершенные проекты:  <button class="button_personal_completed_projects button_all">Все</button> </span>
                                 <div class="personal_completed_projects"></div>
-                                <span class="style_of_text" id="personal_reviews_managers">Отвызы руководителей:</span>
+                                <span class="style_of_text" id="personal_reviews_managers">Отзывы руководителей:  <button class="button_personal_reviews_managers button_all">Все</button> </span>
                                 <div class="personal_reviews_managers"></div>
-                                <span class="style_of_text" id="personal_peer_review">Оценка коллег:</span>
+                                <span class="style_of_text" id="personal_peer_review">Оценка коллег:  <button class="button_personal_peer_review button_all">Все</button> </span>
                                 <div class="personal_peer_review"></div>
                             </div>
                         </div>
