--- a/www_data/data/view/personal_area/index.html
+++ b/www_data/data/view/personal_area/index.html
@@ -15,7 +15,7 @@
         <div class="frame">
             <div class="background_crystal">
                 <form class="form_personal_area" onsubmit="return false;">
-                    <button class="open_main_menu ">Показать меню</button>
+                    <button class="open_main_menu ">Скрыть меню</button>
                     <div class="main_menu">
                         <div class="main_menu_logo">
                             <span id="char_T" class="style_of_text">T</span>
