--- a/www_data/data/view/all_projects/index.html
+++ b/www_data/data/view/all_projects/index.html
@@ -2,14 +2,12 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Личный кабинет</title>
+    <title>Все проекты</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="../personal_area/js/personal_area.js"></script>
+    <script src="../all_projects/js/all_projects.js"></script>
     <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
-    <link rel="stylesheet" href="../personal_area/css/personal_area.css">
-    <link rel="stylesheet" href="../../stylesheets/left_main_menu.css">
-    <link rel="stylesheet" href="../../stylesheets/background.css">
+    <link rel="stylesheet" href="../all_projects/css/all_projects.css">
 </head>
 
 <body>
