--- a/www_data/data/view/my_projects/index.html
+++ b/www_data/data/view/my_projects/index.html
@@ -5,6 +5,7 @@
     <title>Мои проекты</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="../my_projects/js/my_projects.js"></script>
+    <script src="../../js/main_menu.js"></script>
     <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="../my_projects/css/my_projects.css">
@@ -29,14 +30,14 @@
                         <div class="main_menu_projects">
                             <span class="style_of_text" id="main_menu_projects">Проекты</span>
                         </div>
-                        <a href="" id="href_all_projects" class="style_of_text">● Все проекты</a>
-                        <a href="" id="href_my_projects" class="style_of_text">● Мои проекты</a>
-                        <a href="" id="href_my_participation" class="style_of_text">● Моё участие</a>
+                        <a id="href_all_projects" class="style_of_text">● Все проекты</a>
+                        <a id="href_my_projects" class="style_of_text">● Мои проекты</a>
+                        <a id="href_my_participation" class="style_of_text">● Моё участие</a>
                         <div class="main_menu_people">
                             <span class="style_of_text" id="main_menu_people">Люди</span>
                         </div>
-                        <a href="" id="href_job_seekers" class="style_of_text">● Соискатели</a>
-                        <a href="" id="href_personal_area" class="style_of_text">● Моя страница</a>
+                        <a id="href_job_seekers" class="style_of_text">● Соискатели</a>
+                        <a id="href_personal_area" class="style_of_text">● Моя страница</a>
                         <button class="style_of_text" id="button_Settings">Настройки профиля</button>
                         <button class="style_of_text" id="button_exit">Выход</button>
                     </div>
@@ -54,7 +55,20 @@
                             </div>
                         </div>
                         <div class="view_projects">
-                            <div>123</div>
+                            <div class="active_application">
+                                Активных заявок
+                                <span>1</span>
+                            </div>
+                            <div class="my_projects">
+                                <div class="left_block_my_project">
+                                    <div class="name_my_projects">TeamMate. сервис для соискателей и владельцев проектов в различных сферах жизни</div>
+                                </div>
+                                <div class="right_block_my_project">
+                                    <div class="deadline_my_projects">Срок сдачи: 30.05.2020 </div>
+                                    <div class="strength_my_projects">Численность команды: 4/4</div>
+                                </div>
+                            </div>
+                            <div class="line_my_projects line_in_progress"></div>
                         </div>
                     </div>
                 </form>
