--- a/www_data/data/stylesheets/form_projects.css
+++ b/www_data/data/stylesheets/form_projects.css
@@ -1,18 +1,14 @@
 .form_projects{
-    width: 850px;
+    width: 800px;
     position: absolute;
     top: 0%;
 }
 
-.view_projects div{
-    padding: 10px;
-}
-
-.view_projects{
-    text-align: center;   
+.view_projects{ 
     display: flex;
-    flex-direction: column;
+    flex-direction: column; 
     overflow: auto;
+    margin-left: 5%;
 }
 
 ::-webkit-scrollbar {
@@ -42,7 +38,11 @@
 }
 
 #search_projects{
-    width: 565px;
+    padding: 1%;
+    background: #FFFFFF;
+    border: 1px solid rgba(82, 98, 242, 0.5);
+    box-sizing: border-box;
+    box-shadow: inset 3px 3px 6px #5FF252;
 }
 
 #button_all_projects{
@@ -77,7 +77,7 @@
 
 #button_zip{
     background: #FCC400;
-    width: 156px;
+    width: 160px;
     height: 30px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
@@ -85,12 +85,55 @@
     color: #FFFFFF;
 }
 
-#button_new_project{
-    background: #9C9C9C;
-    width: 156px;
-    height: 30px;
+
+.my_projects{
+    width: 715px;
+    display: flex;
+    background: #FFFFFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 10px;
-    font-size: 20px;
-    color: #FFFFFF;
+    border-radius: 10px 0px 10px 10px;
 }
+
+.my_projects div{
+    padding: 5px;
+}
+
+.name_my_projects{
+    width: 426px;
+    left: 20px;
+}
+
+.right_block_my_project div{
+    margin: 5px;
+}
+
+.deadline_my_projects{
+    width: 242px;
+    background: rgba(196, 196, 196, 0.42);
+    border-radius: 10px 0px 10px 10px;
+}
+
+.strength_my_projects{
+    width: 242px;
+    background: rgba(196, 196, 196, 0.42);
+    border-radius: 10px 0px 10px 10px;
+}
+
+.line_my_projects{
+    width: 715px;
+    height: 10px;
+    border-radius: 0px 0px 10px 10px;
+}
+
+.line_in_progress{
+    background: #5EC939;
+}
+
+.line_success{
+    background: #D01E1E;
+}
+
+.line_zip{
+    background: #FCC400;
+}
+.
