--- a/www_data/data/view/my_projects/css/my_projects.css
+++ b/www_data/data/view/my_projects/css/my_projects.css
@@ -3,3 +3,36 @@
     align-items: center;
     justify-content: center;
 }
+
+#button_new_project{
+    background: #9C9C9C;
+    width: 156px;
+    height: 30px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    font-size: 20px;
+    color: #FFFFFF;
+}
+
+.active_application{
+    width: 260px;
+    margin-bottom: 5px;
+    padding: 5px;
+    margin-top: 20px;
+    background: #FFFFFF;
+    border-radius: 10px 10px 0px 0px;
+}
+
+.active_application span{
+    width: 20px;
+    background: #5262F2;
+    border-radius: 10px;
+    margin-left: 10px;
+    padding: 1px;
+    color: #FFFFFF;
+}
+
+#search_projects{
+    width: 545px;
+}
+
