--- a/www_data/data/view/personal_area/index.html
+++ b/www_data/data/view/personal_area/index.html
@@ -5,6 +5,7 @@
     <title>Личный кабинет</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="../personal_area/js/personal_area.js"></script>
+    <script src="../../js/main_menu.js"></script>
     <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="../personal_area/css/personal_area.css">
@@ -28,14 +29,14 @@
                         <div class="main_menu_projects">
                             <span class="style_of_text" id="main_menu_projects">Проекты</span>
                         </div>
-                        <a href="" id="href_all_projects" class="style_of_text">● Все проекты</a>
-                        <a href="" id="href_my_projects" class="style_of_text">● Мои проекты</a>
-                        <a href="" id="href_my_participation" class="style_of_text">● Моё участие</a>
+                        <a id="href_all_projects" class="style_of_text">● Все проекты</a>
+                        <a id="href_my_projects" class="style_of_text">● Мои проекты</a>
+                        <a id="href_my_participation" class="style_of_text">● Моё участие</a>
                         <div class="main_menu_people">
                             <span class="style_of_text" id="main_menu_people">Люди</span>
                         </div>
-                        <a href="" id="href_job_seekers" class="style_of_text">● Соискатели</a>
-                        <a href="" id="href_personal_area" class="style_of_text">● Моя страница</a>
+                        <a id="href_job_seekers" class="style_of_text">● Соискатели</a>
+                        <a id="href_personal_area" class="style_of_text">● Моя страница</a>
                         <button class="style_of_text" id="button_Settings">Настройки профиля</button>
                         <button class="style_of_text" id="button_exit">Выход</button>
                     </div>
