--- a/www_data/data/view/log_up/index.html
+++ b/www_data/data/view/log_up/index.html
@@ -16,11 +16,11 @@
                     <div class="personal_data">
                         <span >Личные данные</span>
                         <div class="sername">
-                            <span id="star">Фамилия*</span>
+                            <span id="star">Фамилия</span>
                             <input id="sername" type="text" >
                         </div>
                         <div class="name">
-                            <span>Имя*</span>
+                            <span>Имя</span>
                             <input id="name" type="text">
                         </div>
                         <div class="patronymic">
@@ -28,15 +28,15 @@
                             <input id="patronymic" type="text">
                         </div>
                         <div class="birthday">
-                            <span>Дата рождения*</span>
+                            <span>Дата рождения</span>
                             <input id="birthday" type="date"/>
                         </div>
                         <div class="gender" >
-                            <span>Пол* </span>
+                            <span>Пол</span>
                             <select class="submenu" ></select>
                         </div>
                         <div class="current_city">
-                            <span>Город проживания*</span>
+                            <span>Город проживания</span>
                             <input id="current_city" type="text">
                         </div>
                     </div>
