--- a/www_data/data/view/personal_area/index.html
+++ b/www_data/data/view/personal_area/index.html
@@ -6,6 +6,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="../personal_area/js/personal_area.js"></script>
     <script src="../../js/main_menu.js"></script>
+    <script src="../../js/jquery_cookie.js"></script>
     <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="../personal_area/css/personal_area.css">
