--- a/www_data/data/view/log_up/index.html
+++ b/www_data/data/view/log_up/index.html
@@ -105,7 +105,7 @@
                             <input id="password" type="text">
                         </div>
                     </div>
-                    <button id="button_log_up">Зарегистрироваться</button>
+                    <button id="button_log_up">Сохранить</button>
                 </form>
             </div>
         </div>
