--- a/www_data/data/view/create_new_project/css/create_new_project.css
+++ b/www_data/data/view/create_new_project/css/create_new_project.css
@@ -12,8 +12,8 @@
 
 .about_project{
     width: 636px;
-    height: 382px;
-    top: 0%;
+    display: flex;
+    flex-direction: column; 
     background: #FFFFFF;
     padding: 10px;
 }
@@ -22,22 +22,13 @@
     padding: 10px;
 }
 
-#span_about_project {
+#span_name_block {
     font-size: 30px;
     color: #5BA963;
 }
 
-.{
-    position: absolute;
-    width: 398.57px;
-    height: 30.83px;
-    left: 452.51px;
-    top: 122.4px;
-
-    background: #FFFFFF;
-    border: 1px solid rgba(82, 98, 242, 0.5);
-    box-sizing: border-box;
-    box-shadow: inset 3px 3px 6px #5FF252;
+#information_of_project{
+    height: 100px;
 }
 
 input{
@@ -48,11 +39,51 @@ input{
     box-shadow: inset 3px 3px 6px #5FF252;
     height: 30px;
     width: 398px;
+    float: right;
 }
 
 span{
-    top: 19%;
     font-family: Tinos;
     font-size: 18px;
     color: #0F25ED;
+}
+
+.requirements_for_candidates{
+    width: 636px;
+    display: flex;
+    flex-direction: column; 
+    background: #FFFFFF;
+    padding: 10px;
+    margin-top: 30px;
+}
+
+.requirements_for_candidates div{
+    padding: 10px;
+}
+
+.required_resources{
+    width: 636px;
+    display: flex;
+    flex-direction: column; 
+    background: #FFFFFF;
+    padding: 10px;
+    margin-top: 30px;
+}
+
+.required_resources div{
+    padding: 10px;
+}
+
+#button_save{
+    width: 636px;
+    height: 47px;
+    background: #5EC939;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    font-family: Tinos;
+    font-size: 30px;
+    color: rgba(255, 255, 255, 0.75);
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    margin-top: 40px;
+    margin-bottom: 30px ;
 }
