--- a/www_data/data/view/log_up/index.html
+++ b/www_data/data/view/log_up/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Регистрация</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="../log_up/js/log_up.js"></script>
-    <link rel="stylesheet" href="../log_up/css/log_up.css">
-    <link rel="stylesheet" href="../../stylesheets/background.css">
+    <script src="./www_data/data/view/log_up/js/log_up.js"></script>
+    <link rel="stylesheet" href="./www_data/data/view/log_up/css/log_up.css">
+    <link rel="stylesheet" href="./www_data/data/stylesheets/background.css">
 </head>
 
 <body>
